Sun Jan 12 23:03:00 CST 2003	Steve Langasek <vorlon@netexpress.net>
	* include/Makefile.am:
	- make sure freetds_sysconfdir.h is built as part of 'make all'.

Sun Jan 12 16:13:00 CST 2003	Steve Langasek <vorlon@netexpress.net>
	* configure.in:
	- add autoconf checks for nl_langinfo.

Sun Jan 12 15:48:00 CST 2003	Steve Langasek <vorlon@netexpress.net>
	* include/Makefile.am:
	- don't install freetds_sysconfdir.h, because no public headers
	  reference it.
	- Add a check for automake 1.53 to include/Makefile.am because of
	  'nodist_include_HEADERS', to avoid accidental partial-builds
	  with incompatible versions of automake.

Sun Jan 12 12:27:00 CST 2003	Steve Langasek <vorlon@netexpress.net>
	* src/ctlib/Makefile.am:
	- bump sover due to structure and constants changed in
	  cspublic.h 1.11.

Sun Jan 12 11:03:41 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/connect_fail.c(added):
	* src/ctlib/ct.c src/ctlib/unittests/.cvsignore:
	* src/ctlib/unittests/Makefile.am:
	- fix core in ctlib closing a failed connection

Sat Jan 11 19:13:33 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/unittests/t0003.c:
	- SQLMoreResults discard results of current result set as documented

Sat Jan 11 18:06:26 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/t0003.c: cleanup and more SQLMoreResults test

Sat Jan 11 17:30:24 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	All this stuff modified from a patch of  Viktar Klimkovitch
	* src/odbc/convert_sql2string.c src/odbc/convert_sql2string.h:
	* src/odbc/convert_tds2sql.c:
	- do not mix sql type to c type
	- some comment added
	- renamed _odbc_get_server_type to odbc_get_server_type
	* src/odbc/error.c: cleanup
	* src/odbc/odbc.c src/odbc/odbc_util.c src/odbc/odbc_util.h:
	- renamed odbc_get_client_type to odbc_tds_to_sql_type and 
	  add version parameter
	- check if sql2tds fail
	- more support for SQLGetStmtAttr